--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -3,131 +3,137 @@
 @import 'fonts';
 @import 'buttons';
 
-
-body{
-    font-family: 'Maven Pro', sans-serif;
-    font-size: 16px;
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    box-sizing: border-box;
-    background: $color3;
-    color: rgba(255,255,255,.45);
-    touch-action: initial !important;
+body {
+  font-family: 'Maven Pro', sans-serif;
+  font-size: 16px;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
+  background: $color3;
+  color: rgba(255, 255, 255, 0.45);
+  touch-action: initial !important;
 }
 
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
-    margin: 0;
+  box-sizing: border-box;
+  margin: 0;
 }
 
-h1,.h1,
-h2,.h2,
-h3,.h3,
-h4,.h4{
-    font-weight: 500;
-    line-height: 1;
-    color: rgba(255,255,255,1);
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3,
+h4,
+.h4 {
+  font-weight: 500;
+  line-height: 1;
+  color: rgba(255, 255, 255, 1);
 }
 
-a{
+h2,
+.h2 {
+  font-size: 2.5rem;
+  line-height: 1.2;
+}
+
+a {
+  color: #fff;
+  position: relative;
+
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: -2px;
+    width: 1px;
+    height: 1px;
+    background: $color1;
+    @include transitionPrefixMultiple(0.2s, all);
+  }
+
+  &:hover {
     color: #fff;
-    position: relative;
+    text-decoration: none;
 
-    &::after{
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: -2px;
-        width: 1px;
-        height: 1px;
-        background: $color1;
-        @include transitionPrefixMultiple(.2s, all);
+    &::after {
+      background: $color2;
+      height: 1px;
+      width: calc(100% + 10px);
+      left: -5px;
     }
-
-    &:hover{
-        color: #fff;
-        text-decoration: none;
-
-        &::after{
-            background: $color2;
-            height: 1px;
-            width: calc(100% + 10px);
-            left: -5px;
-        }
-    }
+  }
 }
 
-@media (min-width: 1680px){
-    .container {
-        max-width: 1360px;
-    }
+@media (min-width: 1680px) {
+  .container {
+    max-width: 1360px;
+  }
 }
-@media (min-width: 1900px){
-    .container-xxl {
-        max-width: 1630px;
-    }
-}
-
-
-header{
-
-    h1{
-        line-height: 1;
-
-        @include mq($from: xxlarge) {
-            font-size: 90px;
-            max-width: 50%;
-        }
-    }
-
-    &.header-full-height{
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    
-}
-.section-py{
-    padding-top: 15vh;
-    padding-bottom: 15vh;
+@media (min-width: 1900px) {
+  .container-xxl {
+    max-width: 1630px;
+  }
 }
 
-.content-with-caption{
-    position: relative;
-    
+header {
+  h1 {
+    line-height: 1;
+
+    @include mq($from: xxlarge) {
+      font-size: 90px;
+      max-width: 50%;
+    }
+  }
+
+  &.header-full-height {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+.section-py {
+  padding-top: 15vh;
+  padding-bottom: 15vh;
+}
+
+.content-with-caption {
+  position: relative;
+
+  @include mq($from: medium) {
+    padding-left: 2rem;
+  }
+
+  .content-caption {
+    font-size: 0.9rem;
+    margin: 0;
+    text-transform: uppercase;
     @include mq($from: medium) {
-        padding-left: 2rem;
+      position: absolute;
+      top: 0;
+      left: 0;
+      span {
+        display: inline-block;
+        transform: rotate(-90deg) translateX(-100%)
+          translateY(calc(-100% - 20px));
+        transform-origin: top left;
+        pointer-events: none;
+      }
     }
-
-    .content-caption{
-        font-size: .9rem;
-        margin: 0;
-        text-transform: uppercase;
-        @include mq($from: medium) {
-            position: absolute;
-            top: 0;
-            left: 0;
-            span{
-                display: inline-block;
-                transform: rotate(-90deg) translateX(-100%) translateY(calc(-100% - 20px));
-                transform-origin: top left;
-                pointer-events: none;
-            }
-        }
-    }
+  }
 }
 
 .layout-enter-active,
 .layout-leave-active {
-    @include transitionPrefixMultiple(.4s, opacity);
+  @include transitionPrefixMultiple(0.4s, opacity);
 }
 .layout-enter,
 .layout-leave-active {
-    opacity: 0;
+  opacity: 0;
 }
