--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -14,6 +14,10 @@ body {
   background: $color3;
   color: rgba(255, 255, 255, 0.45);
   touch-action: initial !important;
+
+  &.has-overlay {
+    overflow: hidden !important;
+  }
 }
 
 *,
