--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -100,7 +100,7 @@ header {
   }
 
   &.header-full-height {
-    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     display: flex;
     align-items: center;
     justify-content: center;
