--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -90,6 +90,12 @@ a {
 }
 
 header {
+  height: calc(var(--vh, 1vh) * 50);
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  @include transitionPrefixMultiple(0.2s, height);
+
   h1 {
     line-height: 1;
 
@@ -104,6 +110,11 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+
+    h1 {
+      margin: 0 auto;
+      text-align: center;
+    }
   }
 }
 .section-py {
