--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -42,8 +42,12 @@ h4,
 
 h2,
 .h2 {
-  font-size: 2.5rem;
+  font-size: 2rem;
   line-height: 1.2;
+
+  @include mq($from: large) {
+    font-size: 2.5rem;
+  }
 }
 
 a {
